# mobo

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LLM.md  README.md  alembic.ini  docker-compose.yml  example_system_prompt.txt  justfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
alembic/: env.py
bot/: __init__.py  config.py  main.py
bot/core/: message_generator.py  prompt_utils.py  response_extractor.py  state.py  workflow.py
bot/discord/: client.py  handlers.py
bot/memory/: __init__.py  langgraph_memory.py  models.py
bot/tools/: __init__.py  common.py  discord_context.py  discord_tools.py  giphy_tools.py  openai_tools.py  rate_limiting.py  web_search_tools.py
bot/utils/: __init__.py  logging.py
scripts/: README.md  deploy.py  init_db.py  migrate.py
src/mobo/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  main.py
src/mobo/agent/: __init__.py  agent_graph.py  bot_interaction_tracker.py  tools.py  types.py  user_profile_agent.py  user_profiles.py
src/mobo/ai/: __init__.py  bot.py  history_processors.py  memory_manager.py  models.py
src/mobo/ai/tools/: __init__.py  bot_profile.py  conversation_history.py  dependencies.py  discord.py  image_generation.py  user_profile.py
src/mobo/bot/: __init__.py  client.py  message_handler.py
src/mobo/chains/: __init__.py  discord_agent.py
src/mobo/client/: __init__.py  client.py
src/mobo/config/: __init__.py  config.py
src/mobo/core/: __init__.py  learn_user_context_node.py  message_generator.py  prompt_helpers.py  response_extractor.py  state.py  workflow.py
src/mobo/db/: __init__.py  engine.py  session.py
src/mobo/discord/: __init__.py  client.py  context.py  handlers.py
src/mobo/handlers/: __init__.py  admin_command_handler.py  base_handler.py  chat_message_handler.py
src/mobo/memory/: __init__.py  conversation_memory.py  langgraph_memory.py  models.py  rag_agent.py  rag_memory.py
src/mobo/models/: __init__.py  base.py  bot_interaction.py  rate_limit.py  user.py
src/mobo/prompts/: __init__.py  discord_bot.py
src/mobo/repositories/: __init__.py  base.py  bot_interaction_repository.py  rate_limit_repository.py  user_repository.py
src/mobo/services/: __init__.py  bot_interaction_service.py  rate_limit_service.py  user_service.py
src/mobo/tools/: __init__.py  common.py  context.py  discord_context.py  discord_context_tools.py  discord_tools.py  giphy_tools.py  image_generation.py  openai_tools.py  rate_limiting.py  schemas.py  user_lookup.py  user_profile_tools.py  web_search_tools.py  web_tools.py
src/mobo/utils/: __init__.py  config.py  embeddings.py  logging.py  rate_limiting.py  text_encoding.py
tests/: README.md  conftest.py  test_memory.py  test_rate_limiting.py  test_web_search_tools.py  test_workflow.py
