[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobo"
description = "A ChatGPT/Discord Chatbot"
version = "0.0.0"
readme = "README.md"
requires-python = "~=3.8"
dependencies = [
    "discord.py==2.3.2",
    "openai==1.55.3",
    "requests==2.28.1",
    "httpx==0.27.0"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--tb=short", "-vvv"]
