[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobo"
version = "0.1.0"
description = "Discord Bot with LangChain and intelligent RAG conversation memory"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.27",
    "langchain-postgres>=0.0.9",
    "openai>=1.97.0",
    "numpy>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "click>=8.0.0",
    "colorlog>=6.8.0",
]

[project.scripts]
mobo = "mobo.cli:main"

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.hatch.build]
include = ["src/mobo"]

[tool.hatch.build.targets.wheel]
packages = ["src/mobo"]

[tool.hatch.build.sources]
"src" = ""
