[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobo"
version = "0.1.0"
description = "Discord Bot with LangChain and intelligent RAG conversation memory"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.27",
    "langchain-postgres>=0.0.9",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "openai>=1.97.0",
    "numpy>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "html2text>=2025.4.15",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.1.0",
    "click>=8.0.0",
    "colorlog>=6.8.0",
    "langgraph-checkpoint>=2.1.1",
    "google-api-python-client>=2.0.0",
]

[project.scripts]
mobo-run = "mobo.main:run_bot"
mobo-dev = "mobo.main:run_dev"

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.12.4",
]

[tool.hatch.build]
include = ["src/mobo"]

[tool.hatch.build.targets.wheel]
packages = ["src/mobo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: mark test as slow running",
]
filterwarnings = [
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
# Ignore SQLAlchemy assignment issues - known limitation
[[tool.mypy.overrides]]
module = "mobo.repositories.*"
disable_error_code = ["assignment"]
